fixed pin icons on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -126,7 +126,7 @@ body {
     display: none;
 }
 
-.note-list li:hover .note-list-icon {
+li:hover .note-list-icon {
     display: block;
 }
 
@@ -338,5 +338,10 @@ h4.note-card-title {
 @media (orientation:portrait) {
     .inactive-sidebar {
         display: none;
+    }
+
+    .note-grid-icon,
+    .note-list-icon {
+        display: block;
     }
 }
